# PhoGlobusHelpers

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: GlobusNotes.md  Mount Google Drive Locally As Virtual md  RCloneSetup.md  lab_bookmarks.md
filelists/: dest_fileList_Apogee_2023-08-07.txt  fileList_Greatlakes_HDF5_2023-08-07.txt  fileList_Greatlakes_pkls_2023-08-07.txt  misplaced_loadedSessionPickle_files  misplaced_loadedSessionPickle_files_2023-07-12.csv  session_results_filelist_2023-07-12.csv
filelists/GreatGDriveMigration2023/: IndividualSizeResults.md
notebooks/: filelists_notebook.ipynb  greatlakes_file_transfers_notebook.ipynb  individual_size_results_notebook.ipynb  testing_notebook.ipynb
scripts/: enable_globus_autocomplete.sh  globus_flow_testing.py  mount_turbo.sh  python_globus_testing.ipynb
scripts/automation-examples/: README.md  globus_changed_files.bat
src/: PhoGlobusHelper.py
src/phoglobushelpers/: PhoGlobusHelper.py  data_planning_helpers.py  path_helpers.py
src/phoglobushelpers/compatibility_objects/: Bookmarks.py  Files.py  Tasks.py
