[tool.poetry]
name = "phoglobushelpers"
version = "0.1.2"
description = "A series of helpers to help the lab with Globus Endpoint related tasks"
authors = ["Pho Hale <PhoHale@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
globus-sdk = "^3.16.0"
globus-cli = "^3.13.0"
pathlib = "^1.0.1"
wheel = "^0.38.4"
ipython = "^8.11.0"
fair-research-login = "^0.3.0"
ipykernel = "^6.23.1"
pandas = "^1.5.1"
pyphocorehelpers = {path = "../pyPhoCoreHelpers", develop=true}
# neuropy = {path = "../NeuroPy", develop=true}

[tool.poetry.group.dev.dependencies]
setuptools = "^67.6.0"
wheel = "^0.38.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
