[tool.poetry]
name = "phoglobushelpers"
version = "0.2.1"
description = "A series of helpers to help the lab with Globus Endpoint related tasks"
authors = ["Pho Hale <PhoHale@gmail.com>"]
readme = "README.md"
packages = [
    { include = "phoglobushelpers", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
globus-sdk = "^3.16.0"
globus-cli = "^3.13.0"
pathlib = "^1.0.1"
wheel = "^0.38.4"
ipython = "^8.11.0"
fair-research-login = "^0.3.0"
ipykernel = "^6.23.1"
pandas = "^1.5.1"
attrs = "^22.1.0"
# pyphocorehelpers = {git = "https://github.com/CommanderPho/pyPhoCoreHelpers.git", tag = "project-with-optional-requirements"}
globus-jupyterlab = "^1.0.0b10"
google-api-python-client = "^2.98.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"

[tool.poetry.group.dev.dependencies]
setuptools = "^67.6.0"
wheel = "^0.38.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
